Added the media abstract class with 3 pure virtual functions.

--- a/Spotify/Spotify.vcxproj.filters
+++ b/Spotify/Spotify.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Spotify.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Media.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Media.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
